--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 matplotlib==3.9.3
-numpy==2.1.3
+numpy
 pandas==2.2.3
 Pillow==11.0.0
 scikit_learn==1.5.2
@@ -7,3 +7,8 @@ seaborn==0.13.2
 torchinfo==1.8.0
 tqdm==4.67.1
 timm
+PyQt6==6.6.1
+PyQt6-Qt6==6.6.1
+PyQt6-sip==13.6.0
+qtawesome==1.3.0
+darkdetect==0.8.0
